--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev:css":"NODE_ENV=development postcss tailwind.css -o",
+    "dev:css": "NODE_ENV=development postcss tailwind.css -o",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "nodemon ./src/backend/app.js --exec babel-node -e js ./src/tailwind.css -w"
   },
   "dependencies": {
+    "antd": "^4.19.5",
     "axios": "^0.26.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
