--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "antd": "^4.19.5",
+    "authenticate": "^0.1.5",
     "axios": "^0.26.1",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -18,13 +19,15 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.10",
     "postcss-cli": "^9.1.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.29.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
